chore: initial nuxt setup

--- a/assets/styles/custom/base.css
+++ b/assets/styles/custom/base.css
@@ -5,3 +5,12 @@
   -moz-osx-font-smoothing: grayscale;
 
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.4s;
+}
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+}
